# Taiji-scRNA-seq

./: LICENSE  README.md  Taiji-scRNA-seq.cabal  stack.yaml
app/: Main.hs
src/Taiji/Pipeline/SC/: DropSeq.hs  RNASeq.hs
src/Taiji/Pipeline/SC/DropSeq/: Config.hs  Functions.hs  Types.hs
src/Taiji/Pipeline/SC/DropSeq/Functions/: Align.hs  Preprocess.hs  QC.hs  Quantification.hs  Utils.hs
src/Taiji/Pipeline/SC/RNASeq/: Functions.hs  Types.hs
src/Taiji/Pipeline/SC/RNASeq/Functions/: Align.hs  Clustering.hs  Internal.hs  Normalization.hs  Preprocess.hs  QC.hs  Quantification.hs  Spectral.hs  Utils.hs
src/Taiji/Pipeline/SC/RNASeq/Functions/Preprocess/: Internal.hs
