name:                Taiji-scRNA-seq
version:             0.1.0
homepage:            https://github.com/githubuser/Taiji-RNA-seq#readme
license:             MIT
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           (c) 2017-2019 Kai Zhang
category:            Bio
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Flag exe
  Description: Build executable
  Default:     False

library
  hs-source-dirs:      src
  exposed-modules:     Taiji.Pipeline.SC.DropSeq
                       Taiji.Pipeline.SC.DropSeq.Functions
                       Taiji.Pipeline.SC.DropSeq.Functions.Preprocess
                       Taiji.Pipeline.SC.DropSeq.Functions.Align
                       Taiji.Pipeline.SC.DropSeq.Functions.Quantification
                       Taiji.Pipeline.SC.DropSeq.Functions.QC
                       Taiji.Pipeline.SC.DropSeq.Functions.Utils
                       Taiji.Pipeline.SC.DropSeq.Types

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , binary
                     , bytestring
                     , bio-pipelines
                     , bio-experiments
                     , bioinformatics-toolkit >= 0.8.0
                     , case-insensitive
                     , conduit
                     , conduit-extra
                     , containers
                     , matrices
                     , double-conversion
                     , data-ordlist
                     , haskell-igraph >= 0.7.0
                     , hashable
                     , HsHTSLib
                     , IntervalMap
                     , lens
                     , mtl
                     , singletons >= 2.5
                     , shelly
                     , SciFlow >= 0.7.0
                     , temporary
                     , text
                     , unordered-containers
                     , vector
                     , Taiji-utils
  default-language:    Haskell2010
  ghc-options:       -Wall
                     -fno-warn-unticked-promoted-constructors
                     -fno-warn-partial-type-signatures

executable taiji-scrna-seq
  hs-source-dirs:      app
  if flag(exe)
    buildable: True
  else
    buildable: False
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Taiji-scRNA-seq
                     , binary
                     , lens
                     , aeson
                     , bio-pipelines
                     , SciFlow >= 0.7.0
                     , SciFlow-app 
                     , SciFlow-drmaa
                     , data-default
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Taiji-RNA-seq
